<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的卡包</string>
    <string name="category_main_hint_search">请输入要寻找的卡片名称</string>
    <string name="category_main_button_search">搜索</string>
    <string name="main_category_name_i">总卡</string>
    <string name="main_category_name_2">新增卡</string>
    <string name="main_category_name_3">团购券</string>
    <string name="card_detail_module_title_info">卡信息</string>
    <string name="card_detail_module_title_merchant">商家</string>
    <string name="card_detail_module_title_around">周边</string>
    <string name="card_detail_module_title_message">短信</string>
    <string name="card_detail_title_category">类别: </string>
    <string name="card_detail_title_name">卡名: </string>
    <string name="card_detail_title_id">卡号: </string>
    <string name="card_detail_title_validity_begin">生效: </string>
    <string name="card_detail_title_validity_end">失效: </string>
    <string name="card_detail_title_note">备注: </string>
    <string name="card_detail_title_merchant_name">商家名称: </string>
    <string name="card_detail_title_merchant_address">商家地址: </string>
    <string name="card_detail_title_merchant_phone">商家电话: </string>
    <string name="card_detail_title_merchant_website">商家网址: </string>
    <string name="card_detail_tip_name">请输入你的卡名</string>
    <string name="card_detail_tip_id">请输入你的卡号</string>
    <string name="card_detail_tip_validity_begin">生效日期</string>
    <string name="card_detail_tip_validity_end">截止日期</string>
    <string name="card_detail_tip_note">请输入备注信息</string>
    <string name="card_detail_tip_merchant_name">请输入商家名称</string>
    <string name="card_detail_tip_merchant_address">请输入商家地址</string>
    <string name="card_detail_tip_merchant_phone">请输入商家电话</string>
    <string name="card_detail_tip_merchant_website">请输入商家网址</string>

</resources>