<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myattr="http://schemas.android.com/apk/res/com.example.cardmanager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/offset_medium" >

        <com.example.views.CardDetailModuleBarView
            android:id="@+id/card_detail_show_bar_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_medium"
            android:background="@drawable/background_corner_radius_top"
            myattr:text="@string/card_detail_module_title_info" />

        <LinearLayout
            android:id="@+id/card_detail_show_module_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.example.views.SplitView
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_corner_radius_bottom"
                android:orientation="vertical"
                android:padding="@dimen/offset_larger" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_name"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" />

                    <ImageView
                        android:id="@+id/card_detaiL_show_button_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/icon_size_medium"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:scaleType="centerInside"
                        android:src="@drawable/card_detail_icon_photo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_category"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <GridView
                        android:id="@+id/card_detail_show_grid_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:horizontalSpacing="3dp"
                        android:numColumns="4"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="3dp" >
                    </GridView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_id"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_validity_begin"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_validity_begin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_medium"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_validity_end"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_validity_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_note"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.example.views.CardDetailModuleBarView
            android:id="@+id/card_detail_show_bar_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_medium"
            android:background="@drawable/background_corner_radius_all"
            myattr:text="@string/card_detail_module_title_merchant" />

        <LinearLayout
            android:id="@+id/card_detail_show_module_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <com.example.views.SplitView
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_corner_radius_bottom"
                android:orientation="vertical"
                android:padding="@dimen/offset_larger" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_merchant_name"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_merchant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_merchant_address"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_merchant_phone"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_merchant_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>

                    <Button
                        android:id="@+id/card_detail_show_buttom_merchant_phone"
                        android:layout_width="@dimen/icon_size_less"
                        android:layout_height="@dimen/icon_size_less"
                        android:background="@drawable/card_detail_show_call" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_larger"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/card_detail_title_merchant_website"
                        android:textColor="@color/text_hint"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/card_detail_show_merchant_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/offset_less"
                        android:layout_weight="1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.example.views.CardDetailModuleBarView
            android:id="@+id/card_detail_show_bar_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_medium"
            android:background="@drawable/background_corner_radius_all"
            myattr:text="@string/card_detail_module_title_message" />

        <com.example.views.CardDetailModuleBarView
            android:id="@+id/card_detail_show_bar_around"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_medium"
            android:background="@drawable/background_corner_radius_all"
            myattr:text="@string/card_detail_module_title_around" />
    </LinearLayout>

</ScrollView>